2008-03-22  Zoltan Varga  <vargaz@gmail.com>

	* assemblyresolve/Makefile.am (MCS): Use gmcs.exe instead of mcs.exe.

2008-03-21  Zoltan Varga  <vargaz@gmail.com>

	* libtest.c: Fix missing return in mono_marshal_alloc (). Disable or fix all
	warnings.

	* assemblyresolve/Makefile.am: Use the 2.0 profile for compilation.

2008-03-20  Mark Probst  <mark.probst@gmail.com>

	* generics-sharing.2.cs: Test cases for ldtoken.

2008-03-19  Rodrigo Kumpera  <rkumpera@novell.com>

	* bug-340662_bug.cs: Added. Regression test for the bug.

	* Makefile.am: Added the new test.

2008-03-18  Mark Probst  <mark.probst@gmail.com>

	* generics-sharing-other-exc.2.il: Test case for catching
	exceptions not derived from System.Exception specified by a type
	variable.

	* Makefile.am: Added the new test.

2008-03-18  Mark Probst  <mark.probst@gmail.com>

	* generic-initobj.2.cs: Test case for initobj in generic code.

	* Makefile.am: Added the new test.

2008-03-17  Mark Probst  <mark.probst@gmail.com>

	* shared-generic-methods.2.cs: Test case for calls from shared
	code to generic methods.

	* Makefile.am: Added the new test.

2008-03-14  Mark Probst  <mark.probst@gmail.com>

	* generics-sharing.2.cs: New tests for static methods.

	* generic-inlining.2.cs: Added.  Tests generic method inlining.

	* shared-generic-synchronized.2.cs: Added.  Tests shared
	synchronized methods.

	* Makefile.am: Added the new tests.  New target for running the
	generic code sharing with the optimization enabled.

2008-03-04  Mark Probst  <mark.probst@gmail.com>

	* generics-sharing.2.c: Added test for open catch clauses in
	shared generic code.

2008-02-27  Zoltan Varga  <vargaz@gmail.com>

	* Makefile.am: Compile and run all tests using the 2.0 profile.

2008-02-26  Rodrigo Kumpera  <rkumpera@novell.com>

	* load-exceptions.cs: Fix the test for missing type situations.

2008-02-26  Zoltan Varga  <vargaz@gmail.com>

	* static-constructor.cs thread5.cs: Fix these so they works on the 2.0 profile too.
